-Felipphe Triviño'- Día 17-09-2013 (EJB)

--- a/DesignerRHN/DesignerRHN-war/web/EmplUbicacionGeografica.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplUbicacionGeografica.xhtml
@@ -81,7 +81,7 @@
                                                          navigator="true" showButtonPanel="true" locale="es" pattern="dd/MM/yyyy" autocomplete="true">                                         
                                                 <p:ajax event="dateSelect" listener="#{controlVigenciasUbicaciones.modificarVU(indice, 'N', info.fechavigencia)}" update="editFecha"/>
                                                 <p:ajax event="change" listener="#{controlVigenciasUbicaciones.modificarVU(indice, 'N', info.fechavigencia)}" />
-                                                <p:ajax event="select" listener="#{controlVigenciasUbicaciones.cambiarIndice(indice, '0')}" />
+                                                <p:ajax event="select" listener="#{controlVigenciasUbicaciones.cambiarIndice(indice, 0)}" />
                                                 <f:convertDateTime pattern="dd/MM/yyyy" />
                                             </p:calendar>
                                         </f:facet>   
@@ -98,8 +98,8 @@
                                         <f:facet name="input">
                                             <p:inputText value="#{info.ubicacion.descripcion}" id="editarUbicacion" style="font-size: 10px; border-radius: 0px; width: 97%; text-transform: uppercase" > 
                                                 <p:ajax event="change" listener="#{controlVigenciasUbicaciones.modificarVU(indice, 'UBICACION', info.ubicacion.descripcion)}"/>
-                                                <p:ajax event="select" listener="#{controlVigenciasUbicaciones.cambiarIndice(indice, '1')}" />
-                                                <p:ajax event="dblclick" listener="#{controlVigenciasUbicaciones.asignarIndex(indice, '0')}"/>
+                                                <p:ajax event="select" listener="#{controlVigenciasUbicaciones.cambiarIndice(indice, 1)}" />
+                                                <p:ajax event="dblclick" listener="#{controlVigenciasUbicaciones.asignarIndex(indice, 0)}"/>
                                             </p:inputText>
                                         </f:facet>  
                                     </p:cellEditor>
@@ -114,8 +114,8 @@
                                         <f:facet name="output"><h:outputText value="#{info.ubicacion.ciudad.nombre}" /></f:facet>  
                                         <f:facet name="input">
                                             <p:inputText id="editarCiudad" value="#{info.ubicacion.ciudad.nombre}" style="font-size: 10px; border-radius: 0px; width: 93.5%; text-transform: uppercase">
-                                                <p:ajax event="change" listener="#{controlVigenciasUbicaciones.modificarVU(indice)}"/>
-                                                <p:ajax event="select" listener="#{controlVigenciasUbicaciones.cambiarIndice(indice, '2')}" />
+                                                <p:ajax event="change" listener="#{controlVigenciasUbicaciones.modificarVU(indice, 'N', info.ubicacion.ciudad.nombre)}"/>
+                                                <p:ajax event="select" listener="#{controlVigenciasUbicaciones.cambiarIndice(indice, 2)}" />
                                             </p:inputText>
                                         </f:facet>  
                                     </p:cellEditor>
@@ -202,11 +202,11 @@
 
                             <strong><h:outputText value="Descripción: " style="font-size: 12px; position: absolute; top: 118px" /></strong>
                             <p:inputText id="nuevaDescripcion" value="#{controlVigenciasUbicaciones.nuevaVigencia.ubicacion.descripcion}" style="font-size: 12px; width: 122px; position: absolute; left: 200px; top: 115px; text-transform: uppercase" onclick="select();">
-                                <p:ajax event="click" listener="#{controlVigenciasUbicaciones.valoresBackupAutocompletar('1', 'UBICACION')}" />
-                                <p:ajax event="change" listener="#{controlVigenciasUbicaciones.autocompletarNuevoyDuplicado('UBICACION', controlVigenciasUbicaciones.nuevaVigencia.ubicacion.descripcion, '1')}" />
-                                <p:ajax event="dblclick" listener="#{controlVigenciasUbicaciones.asignarIndex(indice, '1')}" />
+                                <p:ajax event="click" listener="#{controlVigenciasUbicaciones.valoresBackupAutocompletar(1, 'UBICACION')}" />
+                                <p:ajax event="change" listener="#{controlVigenciasUbicaciones.autocompletarNuevoyDuplicado('UBICACION', controlVigenciasUbicaciones.nuevaVigencia.ubicacion.descripcion, 1)}" />
+                                <p:ajax event="dblclick" listener="#{controlVigenciasUbicaciones.asignarIndex(indice, 1)}" />
                             </p:inputText>
-                            <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 331px; top: 115px;  " id="btnNuevaUbicacion" icon="ui-icon-search" process="@this"  actionListener="#{controlVigenciasUbicaciones.asignarIndex(indice, '1')}"/>   
+                            <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 331px; top: 115px;  " id="btnNuevaUbicacion" icon="ui-icon-search" process="@this"  actionListener="#{controlVigenciasUbicaciones.asignarIndex(indice, 1)}"/>   
                             <p:watermark for="nuevaDescripcion" value="Descripción" />
 
                             <strong><h:outputText value="Ciudad: " style="font-size: 12px; position: absolute; top: 153px" /></strong>
@@ -233,11 +233,11 @@
 
                             <strong><h:outputText value="Descipción: " style="font-size: 12px; position: absolute; top: 118px" /></strong>
                             <p:inputText id="duplicarDescripcion" value="#{controlVigenciasUbicaciones.duplicarVU.ubicacion.descripcion}" style="font-size: 12px; width: 122px; position: absolute; left: 200px; top: 115px;">
-                                <p:ajax event="click" listener="#{controlVigenciasUbicaciones.valoresBackupAutocompletar('2', 'UBICACION')}" />
-                                <p:ajax event="change" listener="#{controlVigenciasUbicaciones.autocompletarNuevoyDuplicado('UBICACION', controlVigenciasUbicaciones.duplicarVU.ubicacion.descripcion, '2')}" />
-                                <p:ajax event="dblclick" listener="#{controlVigenciasUbicaciones.asignarIndex(indice, '2')}" />
+                                <p:ajax event="click" listener="#{controlVigenciasUbicaciones.valoresBackupAutocompletar(1, 'UBICACION')}" />
+                                <p:ajax event="change" listener="#{controlVigenciasUbicaciones.autocompletarNuevoyDuplicado('UBICACION', controlVigenciasUbicaciones.duplicarVU.ubicacion.descripcion, 2)}" />
+                                <p:ajax event="dblclick" listener="#{controlVigenciasUbicaciones.asignarIndex(indice, 2)}" />
                             </p:inputText>
-                            <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 331px; top: 115px;  " id="btnDuplicarUbiacion" icon="ui-icon-search" process="@this"  actionListener="#{controlVigenciasUbicaciones.asignarIndex(indice, '2')}"/>   
+                            <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 331px; top: 115px;  " id="btnDuplicarUbiacion" icon="ui-icon-search" process="@this"  actionListener="#{controlVigenciasUbicaciones.asignarIndex(indice, 2)}"/>   
                             <p:watermark for="duplicarDescripcion" value="Descripción" />
 
                             <strong><h:outputText value="Ciudad: " style="font-size: 12px; position: absolute; top: 153px" /></strong>
