--- a/DesignerRHN/DesignerRHN-war/web/Rastro.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Rastro.xhtml
@@ -156,7 +156,7 @@
                             </p:column>
                         </p:dataTable>
                         
-                        <p:commandButton id="volverVR" onclick="valorRastroDialogo.hide()" style="position: relative; left: 460px" icon="ui-icon-arrowreturnthick-1-w" value="Volver" process="@this"/>
+                        <p:commandButton id="volverVR" onclick="valorRastroDialogo.hide();" style="position: relative; left: 460px" icon="ui-icon-arrowreturnthick-1-w" value="Volver" process="@this"/>
                     </p:dialog>
 
                     <p:dialog id="confirmarEliminados" header="ATENCIÓN" widgetVar="confirmarEliminados"  resizable="false" draggable="false" modal="true" height="95" width="350px" style="font-size: 12px" closable="false">  
