--- a/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
@@ -262,7 +262,7 @@
                                             S.E.T.: Salario Equivalente Tributario.<br/> Calculo de retención en la fuente
                                         </p:tooltip>
 
-                                        <p:commandButton id="Comprobantes" value="" style="position: absolute; background-image: url(Imagenes/comprobante.gif); width: 29px; height: 35px; top: 194px; background-repeat: no-repeat; background-size: 100% 100%; left: 550px;" />
+                                        <p:commandButton id="Comprobantes" value="" style="position: absolute; background-image: url(Imagenes/comprobante.gif); width: 29px; height: 35px; top: 194px; background-repeat: no-repeat; background-size: 100% 100%; left: 550px;" action="emplComprobante" actionListener="#{controlComprobantes.recibirEmpleado(10661474)}" />
                                         <p:tooltip style="font-size: 12px" for="Comprobantes" >
                                             COMPROBANTES DE PAGO: Observe todos los comprobantes<br/> de pago que ha tenido el empleado.
                                         </p:tooltip>
@@ -731,7 +731,7 @@
 
                             <f:facet name="header" >  
                                 <h:outputText value="Buscar Empleado: "  style="position: absolute; left: 22px; top: 18px"/>  
-                                <p:inputText id="globalFilter" onkeyup="busquedaR.filter()" style="width:150px; position: relative; left: -150px;" />  
+                                <p:inputText id="globalFilter" onkeyup="busquedaR.filter();" style="width:150px; position: relative; left: -150px;" />  
                                 <p:watermark for="globalFilter" value="Ingresar valor a buscar" />
                             </f:facet>
 
@@ -774,7 +774,7 @@
 
                             <f:facet name="header" >  
                                 <h:outputText value="Buscar Empleado: "  style="position: absolute; left: 22px; top: 18px;"/>  
-                                <p:inputText id="globalFilter" onkeyup="buscarE.filter()" style="width:150px; position: relative; left: -150px;"/>
+                                <p:inputText id="globalFilter" onkeyup="buscarE.filter();" style="width:150px; position: relative; left: -150px;"/>
                                 <p:watermark for="globalFilter" value="Ingresar valor a buscar" />
                             </f:facet>
 
